# escooter_mock_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: rentals.py  scooters.py  users.py
